	  out of the exemples directory and into the apps/ directory where
	  it belongs.
	* apps/Makefile and configs/*/appconfig: Use '=' as the delimiter
	  instead of '/' so that sub-directories in apps/ can be used.
	* apps/vsn: Move all VSN apps to apps/vsn.
	* nuttx/examples moved to apps/examples

6.1 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/include/lpc17xx/irq.h and arch/arm/src/lpc17xx/lpc17_gpio*.c:
	  Fix several bugs in the GPIO interrupt logic.  Submited by
	  Decio Renno.
	* Initialization for the CONFIG_APPS_DIR is now supported during the
	  earlier, 'context' build phase.
	* arch/arm/src/lpc17_gpioint.c: Finish coding of the LPC17xx GPIO
	  interrupt logic.
	* net/netdev_unregister.c: Add capability to un-register a network
	  device.
	* drivers/mmcsd/mmcsd_sdio.c: extra effort to correctly handle cases
	  without the SDcard (but one issue still exists in STM32)
	* arch/arm/src/stm32/stm32_tim.*: Added basic timer support TIM1..TIM8
	  with output PWMs and interrupt logic
	* config/vsn/src: added basic support for Sensor Interface (GPIO and
	  PWM Power Output, and the sif utility program)
	* fs/: Reorgnize header so that file systems can be built outside
	  of the nuttx source tree
	* apps/namedapp/binfs.c: Create a tiny filesystem that can be used
	  to show the internal named apps under /bin.
	* fs/fs_opendir.c: Correct an error that occurs when a file system is
	  mounted in the root directory.  This was discovered while mounting
	  the named app's /bin directory.
	* lib/: Move all source files into a subdirectory of lib/ named after
	  the header file in which the library function is prototyped.
	* sched/ and lib/pthread/:  Move pthread attribute-related interfaces
	  from sched/ to lib/pthread where they more appropriately belong.
	* sched/ and lib/semaphore/:  Move some semaphore-related interfaces
	  from sched/ to lib/pthread where they more appropriately belong.
	* syscall/: The beginnings of an options syscall interface.