@@ -97,11 +97,30 @@ Auto-Generated Files
 Stubs and proxies for the sycalls are automatically generated from this CSV
 database.  Here the following definition is used:
 
-  STUB  - A tiny bit of code that executes with within the NuttX kernel that
-          is used to map a software interrupt received by the kernel to a
-          kernel function call.
-
-  Proxy - Another tiny bit of code that executes in the user space. A proxy
+  Proxy - A tiny bit of code that executes in the user space. A proxy
           has exactly the same function prototype as does the "real" function
           for which it proxies.  However, it only serves to map the function
-          call into a syscall, marshalling all of the parameters as necessary.
+          call into a syscall, marshalling all of the system call parameters
+          as necessary.
+
+  STUB  - Another tiny bit of code that executes within the NuttX kernel
+          that is used to map a software interrupt received by the kernel to
+          a kernel function call. The stubs receive the marshalled system
+          call data, and perform the actually kernel function call (in
+          kernel-mode) on behalf of the proxy function.
+
+Sub-Directories
+===============
+
+  stubs - Autogenerated stub files are placed in this directory.
+  proxies - Autogenerated proxy files are placed in this directory.
+
+mksyscall
+=========
+
+  mksyscall is C program that is used used during the initial NuttX build
+  by the logic in the top-level syscall/ directory. Information about the
+  stubs and proxies is maintained in a comma separated value (CSV) file
+  in the syscall/ directory.  The mksyscall program will accept this CVS
+  file as input and generate all of the required proxy or stub files as
+  output.  See tools/README.txt for additonal information.
